testing some styling

--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
 </head>
 
 <body>
-    <h1>Wilkommen</h1>
-    <h2>Portfolio von Livia Zaugg</h2>
+    <div class="profile-header">
+        <img src="profile.jpg" alt="Profile picture of Livia Zaugg" class="profile-pic" />
+        <div>
+            <h1>Livia Zaugg</h1>
+            <h2>Portfolio</h2>
+        </div>
+    </div>
+    <p>Welcome to my portfolio website! Here you can find information about my projects, skills, and experiences.</p>
+    <h3>Projects</h3>
+    <p>Here are some of my recent projects:</p>
+    <ul>
+        <li>Instagram Account HikingBirds</li>
+        <li>Webdesign for my Portfolio</li>
+    </ul>
+    <h3>Skills</h3>
+    <p>Here are some of the skills I possess:</p>
+    <ul>
+        <li>Graphic Design</li>
+        <li>Project Management</li>
+        <li>Photography, Videography and Editing</li>
+    </ul>
 </body>
 
 </html>
