--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="profile-header">
-        <div>
+        <div class="profile-info">
             <h1>Livia Zaugg</h1>
             <h2>Portfolio</h2>
         </div>
