--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+    </nav>
     <div class="profile-header">
         <div class="profile-info">
             <h1>Livia Zaugg</h1>
@@ -17,19 +21,22 @@
         <img src="profile.jpg" alt="Profile picture of Livia Zaugg" class="profile-pic" />
     </div>
     <p>Welcome to my portfolio website! Here you can find information about my projects, skills, and experiences.</p>
-    <h3>Projects</h3>
+    <h3 id="projects">Projects</h3>
     <p>Here are some of my recent projects:</p>
     <ul>
         <li>Instagram Account HikingBirds</li>
         <li>Webdesign for my Portfolio</li>
     </ul>
-    <h3>Skills</h3>
+    <h3 id="skills">Skills</h3>
     <p>Here are some of the skills I possess:</p>
     <ul>
         <li>Graphic Design</li>
         <li>Project Management</li>
         <li>Photography, Videography and Editing</li>
     </ul>
+    <footer>
+        <p>Contact: livia.zaugg@email.com &nbsp;|&nbsp; © 2025 Livia Zaugg</p>
+    </footer>
 </body>
 
 </html>
