random fact api

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         </div>
         <img src="profile.jpg" alt="Profile picture of Livia Zaugg" class="profile-pic" />
     </div>
+
+    <!-- Useless fact widget -->
+    <section class="fact-section">
+        <div class="fact-box">
+            <p id="useless-fact">Loading a useless fact…</p>
+            <button id="fact-refresh" type="button">Another fact</button>
+        </div>
+    </section>
+
     <p>Welcome to my portfolio website! Here you can find information about my projects, skills, and experiences.</p>
     <h3 id="projects">Projects</h3>
     <p>Here are some of my recent projects:</p>
@@ -37,6 +46,8 @@
     <footer>
         <p>Contact: livia.zaugg@email.com &nbsp;|&nbsp; © 2025 Livia Zaugg</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
